Bug 67289 - [PNV bisected]igt/tools_test fails
Summary: [PNV bisected]igt/tools_test fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Ben Widawsky
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-25 03:20 UTC by lu hua
Modified: 2017-10-06 14:44 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (65.29 KB, text/plain)
2013-07-25 03:20 UTC, lu hua
no flags Details

Description lu hua 2013-07-25 03:20:50 UTC
Created attachment 82976 [details]
dmesg

System Environment:
--------------------------
Platform:  Pineview
Kernel:    (drm-intel-nightly)ae5779ebae3a73ca4d18118a4b8600e4a36aaea7

Bug detailed description:
-------------------------
It fails on Pineview with drm-intel-nightly, drm-intel-next-queued, drm-intel-fixes kernel.
It's a new igt case.

output:
./drm_lib.sh: line 7:  3613 Aborted                 (core dumped) $@ > /dev/null                                                                                                  2>&1
FAIL: ./../tools/intel_reg_dumper (134)

Reproduce steps:
----------------------------
1. ./tools_test
Comment 1 Daniel Vetter 2013-07-25 14:40:26 UTC
Bisect points at Ben as the culprit:

commit 57bc7631e161a7bdcf7f68e1a46049dcb49c2256
Author: Ben Widawsky <ben@bwidawsk.net>
Date:   Thu May 23 11:09:55 2013 -0700

    lib/intel_mmio: Fix the fix
Comment 2 Ben Widawsky 2013-07-26 21:42:23 UTC
(In reply to comment #1)
> Bisect points at Ben as the culprit:
> 
> commit 57bc7631e161a7bdcf7f68e1a46049dcb49c2256
> Author: Ben Widawsky <ben@bwidawsk.net>
> Date:   Thu May 23 11:09:55 2013 -0700
> 
>     lib/intel_mmio: Fix the fix

The test and the failing function both were invented long afterwards. Can you explain how you got this bisect result? Is intel_reg_dump failing by itself?
Comment 3 Daniel Vetter 2013-07-26 22:12:44 UTC
I've tested intel_reg_dumper and used that for bisecting. Note that you've fixed fallout from my attempt to fix an earlier regression on gen3 with intel_reg_dumper.
Comment 4 Ben Widawsky 2013-07-27 22:31:51 UTC
Probably fix has been pushed. Please retest and report.
Comment 5 Ben Widawsky 2013-07-27 22:32:30 UTC
(In reply to comment #4)
> Probably fix has been pushed. Please retest and report.

Meant to add...

commit a85548910cbb5f9f9c90b99a178e3b5bc1034730
Author: Ben Widawsky <ben@bwidawsk.net>
Date:   Sat Jul 27 15:30:41 2013 -0700

    lib/intel_mmio: Fix the fixed fix (register access)
Comment 6 lu hua 2013-07-29 08:19:17 UTC
Fixed.
Comment 7 lu hua 2013-07-29 08:19:31 UTC
Verified.Fixed.
Comment 8 Elizabeth 2017-10-06 14:44:48 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.